import "swift/protocol/Common.proto";
import "swift/protocol/ErrCode.proto";

package swift.protocol;
option java_package="com.alibaba.search.swift.protocol";

message TaskStatus {
    optional TaskInfo taskInfo = 1;
    optional PartitionStatus status = 2;
    optional ErrorCode errCode = 3;
    optional int64 errTime = 4;
    optional string errMsg = 5;
} 

message HeartbeatInfo {
    optional bool alive = 1;
    optional RoleType role = 2;
    optional string address = 3;
    repeated TaskStatus tasks = 4;
    
    // for broker error 
    optional ErrorCode errCode = 5;
    optional int64 errTime = 6;
    optional string errMsg = 7;
    optional BrokerVersionInfo versionInfo = 8;
}

message RoleVersionInfo {
    optional string roleName = 1;
    optional BrokerVersionInfo versionInfo = 2;
}

message RoleVersionInfos {
    repeated RoleVersionInfo versionInfos = 1;
}
